[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "concat-img"
dynamic = ["version"]
description = 'Concatenates/Tiling images'
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["image", "tile", "align"]
authors = [
    { name = "Kentaro Tatsumi", email = "paqira.2019@gmail.com" },
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pillow>=11.0.0",
    "click>=8.0.0",
]

[project.urls]
Documentation = "https://github.com/paqira/concat-img"
Issues = "https://github.com/paqira/concat-img/issues"
Source = "https://github.com/paqira/concat-img"

[project.scripts]
concat-img = "concat_img:main"

[tool.hatch.version]
path = "concat_img.py"

[tool.hatch.envs.types]
extra-dependencies = [
    "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive --ignore-missing-imports {args:concat_img.py}"

#[tool.coverage.run]
#source_pkgs = ["ximgpdf", "tests"]
#branch = true
#parallel = true
#omit = []

#[tool.coverage.paths]
#ximgpdf = ["ximgpdf", ]
#tests = ["tests", ]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# hatch.build

[tool.hatch.build]
skip-excluded-dirs = true

[tool.hatch.build.targets.sdist]
only-include = ["concat_img.py", ]
